# proteus

./: AGENTS.md  README.md  pyproject.toml
artifacts/: smoke-run_bundle.json  smoke-run_events.jsonl  smoke-run_fills.jsonl  smoke-run_metrics.json  smoke-run_summary.csv
docs/: PROTEUS_SEED_PROTOCOL.md
docs/planning/: PROTEUS_ARCHITECTURE_ROADMAP.md  PROTEUS_BUILD_LOG.md  PROTEUS_DAILY_CHECKLIST.md  PROTEUS_RESEARCH_NOTES.md  PROTEUS_TICKETS.md  PROTEUS_TICKETS_JIRA.csv
proteus/: __init__.py  __main__.py
proteus/agents/: base.py  informed.py  market_maker.py  noise.py  sniper.py
proteus/core/: accounting.py  clock.py  config.py  events.py  rng.py  smoke.py
proteus/execution/: latency.py  leakage.py
proteus/experiments/: analysis.py  baseline_pack.py  calibrate_clob.py  calibration.py  cli.py  dual_flow_phase4_report.py  export_bundle.py  fba_phase2_sweep.py  parity.py  rfq_phase3_sweep.py  run_clob_baseline_pack.py  run_dual_flow_phase4_report.py  run_fba_phase2_sweep.py  run_rfq_phase3_sweep.py  runner.py  scenarios.py
proteus/info/: latent_process.py  signal_model.py
tests/: test_accounting.py  test_agents_v1.py  test_baseline_pack.py  test_clob_calibration.py  test_clob_mechanism.py  test_dual_flow_batch_mechanism.py  test_dual_flow_phase4_report.py  test_execution_models.py  test_experiments_cli.py  test_fba_mechanism.py  test_fba_phase2_sweep.py  test_info_models.py  test_mechanism_parity.py  test_metrics_recorder.py  test_rfq_mechanism.py  test_rfq_phase3_sweep.py  test_rng_manager.py  test_smoke.py  test_time_and_events.py
(+11 files in other folders)
